# adventofcode2024

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  main.sh  main_01.sh  main_02.sh  main_03.sh  main_04.sh  main_05.sh  main_06.sh  new_day.sh  test.sh
include/: directions.h  grid.h  grid.tpp  pos.h  vector.h
include/01/: main.h  solve.h
include/02/: main.h  range.h  report.h  solve.h
include/03/: instruction.h  main.h  solve.h
include/04/: grid.h  letter.h  main.h  solve.h
include/05/: main.h  solve.h
include/06/: main.h  solve.h
include/07/: equation.h  main.h  solve.h
include/08/: antenna.h  main.h  solve.h
include/09/: main.h  solve.h
include/10/: main.h  solve.h  tile.h
src/: directions.cpp  lib.rs  pos.cpp  vector.cpp
src/01/: main.cpp  solve.cpp
src/02/: main.cpp  range.cpp  report.cpp  solve.cpp
src/03/: instruction.cpp  main.cpp  solve.cpp
src/04/: grid.cpp  letter.cpp  main.cpp  solve.cpp
src/05/: letter.cpp  main.cpp  solve.cpp
src/06/: main.cpp  solve.cpp
src/07/: equation.cpp  main.cpp  solve.cpp
src/08/: antenna.cpp  main.cpp  solve.cpp
src/09/: main.cpp  solve.cpp
src/10/: main.cpp  solve.cpp  tile.cpp
src/day11/: blink.rs  mod.rs
src/day12/: examples.rs  garden.rs  mod.rs  solve.rs
src/day13/: examples.rs  mod.rs  solve.rs
src/day14/: examples.rs  mod.rs  robot.rs  solve.rs
src/day15/: examples.rs  mod.rs  solve.rs  warehouse.rs
src/day16/: examples.rs  maze.rs  mod.rs  solve.rs
src/day17/: computer.rs  examples.rs  mod.rs  solve.rs
src/day18/: examples.rs  mod.rs  ram.rs  solve.rs
src/day19/: examples.rs  mod.rs  solve.rs  towels.rs
src/day20/: examples.rs  mod.rs  racetrack.rs  solve.rs
src/day21/: examples.rs  keypads.rs  mod.rs  solve.rs
tests/01/: test_main.cpp  test_solve.cpp
tests/02/: test_solve.cpp
tests/03/: test_solve.cpp
tests/04/: test_solve.cpp
tests/05/: test_solve.cpp
tests/06/: test_solve.cpp
tests/07/: test_solve.cpp
tests/08/: test_solve.cpp
tests/09/: test_solve.cpp
tests/10/: test_solve.cpp
tests/day11/: main.rs
